@@ -1,4 +1,14 @@
-DIST do_sqlite3-0.9.9.gem 15872 RMD160 761f1040f726222d1c90e5f0a741561f3ab2c9a1 SHA1 b9d011fa3c4f8f49439ab5918281e053f1e624e0 SHA256 b61f89c614b8d809ceea9ab0ea56e349758be56b8aa5519d8597fc250c590175
-EBUILD do_sqlite3-0.9.9.ebuild 323 RMD160 05419640e5aeba8626fc3e92e0d663efadc5fa5d SHA1 6ca4fd107c824b7bffff112f67ffa849f259f489 SHA256 19a869e16747ad2832c2114f74a2ac65f7ee54885d52d5e71c34c1fb7658e0c9
-MISC ChangeLog 277 RMD160 2a437fcfe21ffe189347a3e795ae057c71129035 SHA1 4107ab688d5c00298e9b52c2f952cc99ab37272a SHA256 855ea037f5fc0c5d3d28d3a42629f4d3d807334a5a0d05f389f1c0a2c2239eaa
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST do_sqlite3-0.10.2.gem 20480 RMD160 e8d85c119b12e34495ccef5f9bf0356514660771 SHA1 ac5f6c80daa3c081164aea0bdf30f75ed88d3206 SHA256 20d165515b8d0d63f5b72aff03f5e62b5e173ffd7276245a642f2e42221da646
+EBUILD do_sqlite3-0.10.2.ebuild 1124 RMD160 3f6f20c19f169d950ae6843f332d5539564c74a8 SHA1 a0ed9ef83d0b7e621e0722225c7526b95ae56f7c SHA256 e71e493e4c63cf703b9a3551c97e054f2ee270fcf7607bf47f59afb2da5dab4e
+MISC ChangeLog 482 RMD160 90ab383ede9c5e5350facf371cf49607c6f55593 SHA1 c8f8ae877eff1f5ef891f32050d4520e16bb71f2 SHA256 4871030ab6bed0e4febdeb0cd8abaac29cbee7584934b8f094dbd68c7c3f5ca8
 MISC metadata.xml 159 RMD160 eb364108353c7843cf1c01fba92129aaa46a0334 SHA1 0734f4c292968932afc57d0aa3a681c0b75b7bfc SHA256 abab7965b1f41e0acf6b54c554945c1c9fa35b5afab848d784dc58c298bc4679
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.15 (GNU/Linux)
+
+iF4EAREIAAYFAkxnrucACgkQZihJkut28SsXpAEAxWCzV/DhFrUBGAJAto2lNmBY
+iQHrNov2baP9GOUmfrkA/2kOClXN0wvatwnYIu0gH0TV3gIO+bP7aw9aL+s4wFkP
+=Y+UC
+-----END PGP SIGNATURE-----
