@@ -1,15 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-inherit gems
-
-DESCRIPTION="A DataObjects driver for SQLite3"
-HOMEPAGE="http://rubyforge.org/projects/dorb"
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="~x86 ~amd64"
-IUSE=""
-
-RDEPEND="=dev-ruby/data_objects-0.9.9"
